...
                    singleLine = true,
                )
                Box(
                    modifier = Modifier
                        .matchParentSize()
                        .clickable(onClick = onNavigateToSearch)
                        .testTag("rackListSearchField"),
                )
            }
            Box(
                modifier = Modifier
                    .weight(1f)
                    .fillMaxWidth(),
...
