...
        },
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        stringResource(R.string.item_detail_title),
                        modifier = Modifier.testTag("itemDetailScreenTitle"),
                        maxLines = 1,
                        overflow = TextOverflow.Ellipsis,
                    )
                },
                navigationIcon = {
                    IconButton(
...
